RESOLVED FIXED206591
[GTK] Navigation gesture creates CSS nodes and doesn't remove them
https://bugs.webkit.org/show_bug.cgi?id=206591
Summary [GTK] Navigation gesture creates CSS nodes and doesn't remove them
Alice Mikhaylenko
Reported 2020-01-22 09:38:43 PST
See the patch.
Attachments
Patch (2.45 KB, patch)
2020-01-22 09:43 PST, Alice Mikhaylenko
no flags
Alice Mikhaylenko
Comment 1 2020-01-22 09:43:31 PST
WebKit Commit Bot
Comment 2 2020-01-23 01:29:15 PST
Comment on attachment 388432 [details] Patch Clearing flags on attachment: 388432 Committed r254967: <https://trac.webkit.org/changeset/254967>
WebKit Commit Bot
Comment 3 2020-01-23 01:29:16 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.