[GTK] Navigation gesture creates CSS nodes and doesn't remove them https://bugs.webkit.org/show_bug.cgi?id=206591

Patch by Alexander Mikhaylenko <alexm@gnome.org> on 2020-01-23
Reviewed by Carlos Garcia Campos.

Even though foreign drawing uses a temporary GtkStyleContext, calling
gtk_style_context_set_parent() adds all its CSS nodes to the global
hierarchy, and then they aren't cleaned up. This shouldn't happen.

* UIProcess/gtk/ViewGestureControllerGtk.cpp:
(WebKit::ViewGestureController::createStyleContext):Stop setting GtkStyleContext parent.

Canonical link: https://commits.webkit.org/219683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254967 268f45cc-cd09-0410-ab3c-d52691b4dbfc